--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -7,8 +7,8 @@ jobs:
     name: Run Terratest Unit Tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: hashicorp/setup-terraform@a1502cd9e758c50496cc9ac5308c4843bcd56d36 # v3.0.0
         with:
           terraform_version: 1.2.5
           terraform_wrapper: false
